[gd_scene load_steps=15 format=3 uid="uid://drjv6mqrkwq3n"]

[ext_resource type="Script" path="res://scripts/menus/inventory_panel/inventory_menu.gd" id="1_b8tdp"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="2_n8oq0"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_emweo"]
[ext_resource type="Texture2D" uid="uid://b07b3t04115ub" path="res://graphics/items/gold_coin.png" id="4_7ietu"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://themes/button_row_theme.tres" id="5_msabb"]
[ext_resource type="PackedScene" uid="uid://bw758t8yxr7j1" path="res://prefabs/ui/inventory/item_details_panel.tscn" id="6_ay1wk"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="7_n4b6m"]
[ext_resource type="PackedScene" uid="uid://ie2m5n6k0qjg" path="res://prefabs/ui/inventory/item_use_panel.tscn" id="7_t7wq8"]
[ext_resource type="PackedScene" uid="uid://dmj1y0ptr5di5" path="res://prefabs/ui/inventory/shard_learn_panel.tscn" id="8_suef4"]
[ext_resource type="SpriteFrames" uid="uid://mihrqii33xe7" path="res://graphics/ui/a_tutorial_arrow.tres" id="9_p30lc"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="9_vr3fk"]
[ext_resource type="PackedScene" uid="uid://mfj250ugvh12" path="res://prefabs/ui/inventory/stat_reset_panel.tscn" id="10_yjhqm"]
[ext_resource type="PackedScene" uid="uid://b03wrcogq8csb" path="res://prefabs/ui/inventory/item_confirm_panel.tscn" id="11_c0y15"]
[ext_resource type="PackedScene" uid="uid://n55f6tk0t25u" path="res://prefabs/ui/inventory/equip_panel.tscn" id="12_eeu1a"]

[node name="InventoryPanelNode" type="Node2D"]
script = ExtResource("1_b8tdp")

[node name="InventoryPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_n8oq0")

[node name="Panel" type="Panel" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryTitle" type="RichTextLabel" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_top = 10.0
offset_right = 196.0
offset_bottom = 60.0
grow_horizontal = 2
theme = ExtResource("3_emweo")
bbcode_enabled = true
text = "[center]Your Inventory[/center]"
fit_content = true

[node name="GoldCountGroup" type="Control" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 0
offset_left = 28.0
offset_top = 28.0
offset_right = 132.0
offset_bottom = 108.0

[node name="GoldLabel" type="RichTextLabel" parent="InventoryPanel/Panel/GoldCountGroup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 15.0
offset_bottom = 23.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Your Gold:[/center]"
fit_content = true

[node name="GoldSprControl" type="Control" parent="InventoryPanel/Panel/GoldCountGroup"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="GoldSprite" type="Sprite2D" parent="InventoryPanel/Panel/GoldCountGroup/GoldSprControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("4_7ietu")

[node name="GoldCount" type="RichTextLabel" parent="InventoryPanel/Panel/GoldCountGroup"]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -13.0
offset_right = 126.0
offset_bottom = 13.0
grow_vertical = 2
text = "456,789"
fit_content = true

[node name="ToggleShopInventoryButton" parent="InventoryPanel/Panel" instance=ExtResource("9_vr3fk")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = 28.0
offset_right = -29.0
offset_bottom = 68.0
grow_horizontal = 0
focus_neighbor_top = NodePath("../BackButton")
focus_neighbor_bottom = NodePath("../HBoxContainer/KeyItemsButton")
text = "Show Your Inventory"

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 80.0
offset_right = 350.0
offset_bottom = 120.0
grow_horizontal = 2
theme = ExtResource("5_msabb")
alignment = 1

[node name="AllButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "All"

[node name="HealingButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Healing"

[node name="ShardsButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Shards"

[node name="WeaponsButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Weapons"

[node name="ArmorButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Armor"

[node name="KeyItemsButton" parent="InventoryPanel/Panel/HBoxContainer" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Key Items"

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryPanel/Panel" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 128.0
offset_right = -70.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
script = ExtResource("7_n4b6m")
boxContainer = NodePath("VBoxContainer")
jumpToStartOnEndScroll = false

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/Panel/ScrollContainer"]
custom_minimum_size = Vector2(1120, 76)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" parent="InventoryPanel/Panel" instance=ExtResource("9_vr3fk")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_bottom = NodePath("../HBoxContainer/WeaponsButton")
text = "Back"

[node name="LearnShardTutorialShade" type="ColorRect" parent="InventoryPanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.431373)

[node name="TutorialArrowControl" type="Control" parent="InventoryPanel/Panel/LearnShardTutorialShade"]
custom_minimum_size = Vector2(64, 96)
anchors_preset = 0
offset_right = 64.0
offset_bottom = 96.0
mouse_filter = 2

[node name="TutorialArrowSprite" type="AnimatedSprite2D" parent="InventoryPanel/Panel/LearnShardTutorialShade/TutorialArrowControl"]
z_index = 1
position = Vector2(32, 48)
scale = Vector2(4, 4)
sprite_frames = ExtResource("9_p30lc")
frame_progress = 0.105732

[node name="EquipPanel" parent="." instance=ExtResource("12_eeu1a")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1

[node name="StatResetPanel" parent="." instance=ExtResource("10_yjhqm")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="ItemDetailsPanel" parent="." instance=ExtResource("6_ay1wk")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="ItemUsePanel" parent="." instance=ExtResource("7_t7wq8")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="ShardLearnPanel" parent="." instance=ExtResource("8_suef4")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="ItemConfirmPanel" parent="." instance=ExtResource("11_c0y15")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[connection signal="item_used" from="." to="." method="_on_item_used"]
[connection signal="pressed" from="InventoryPanel/Panel/ToggleShopInventoryButton" to="." method="_on_toggle_shop_inventory_button_pressed"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/AllButton" to="." method="_on_all_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/HealingButton" to="." method="_on_healing_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/ShardsButton" to="." method="_on_shards_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/WeaponsButton" to="." method="_on_weapons_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/ArmorButton" to="." method="_on_armor_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/KeyItemsButton" to="." method="_on_key_items_button_toggled"]
[connection signal="visibility_changed" from="InventoryPanel/Panel/ScrollContainer" to="InventoryPanel/Panel/ScrollContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="InventoryPanel/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="close_equip_panel" from="EquipPanel" to="." method="_on_equip_panel_close_equip_panel"]
[connection signal="show_details_for_item" from="EquipPanel" to="." method="_on_equip_panel_show_details_for_item"]
[connection signal="stats_button_pressed" from="EquipPanel" to="." method="_on_equip_panel_stats_button_pressed"]
[connection signal="close_stat_reset_panel" from="StatResetPanel" to="." method="_on_stat_reset_panel_close_stat_reset_panel"]
[connection signal="stats_button_pressed" from="StatResetPanel" to="." method="_on_stat_reset_panel_stats_button_pressed"]
[connection signal="back_pressed" from="ItemDetailsPanel" to="." method="_on_details_back_button_pressed"]
[connection signal="pressed" from="ItemDetailsPanel/Panel/BackButton" to="." method="_on_details_back_button_pressed"]
[connection signal="ok_pressed" from="ItemUsePanel" to="." method="_on_item_use_panel_ok_pressed"]
[connection signal="back_pressed" from="ShardLearnPanel" to="." method="_on_shard_learn_panel_back_pressed"]
[connection signal="learned_move" from="ShardLearnPanel" to="." method="_on_shard_learn_panel_learned_move"]
[connection signal="confirm_option" from="ItemConfirmPanel" to="." method="_on_item_confirm_panel_confirm_option"]

[editable path="ItemDetailsPanel"]
